chore: форматирование проекта и правила линтера

--- a/biome.json
+++ b/biome.json
@@ -24,7 +24,10 @@
 	},
 	"javascript": {
 		"formatter": {
-			"quoteStyle": "double"
+			"quoteStyle": "single",
+			"jsxQuoteStyle": "single",
+			"semicolons": "asNeeded",
+			"arrowParentheses": "asNeeded"
 		}
 	}
 }
