--- a/biome.json
+++ b/biome.json
@@ -19,7 +19,14 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"nursery": {
+				"useSortedClasses": {
+					"level": "error",
+					"fix": "safe",
+					"options": {}
+				}
+			}
 		}
 	},
 	"javascript": {
