--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.4",
+		"ajv": "^8.17.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"tailwindcss": "^4.1.4"
+		"tailwindcss": "^4.1.4",
+		"vite-plugin-dts": "^4.5.3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
