--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
+	"types": "dist/index.d.ts",
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"import": "./dist/sat-ui.es.js",
+			"require": "./dist/sat-ui.umd.js"
+		}
+	},
+	"files": ["dist"],
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
