--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.4",
 		"ajv": "^8.17.1",
+		"clsx": "^2.1.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"tailwind-merge": "^3.2.0",
 		"tailwindcss": "^4.1.4",
 		"vite-plugin-dts": "^4.5.3"
 	},
